PJ2-707 Correct layout- no cat when search, change stylig, adjust scc to cusyomer, overflow, rwd corr

--- a/app/design/frontend/peterjacksons/petertheme/web/css/modules/smile-elastic/_search-autocomplete.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/modules/smile-elastic/_search-autocomplete.scss
@@ -47,9 +47,7 @@
             }
 
             .amount {
-                position: absolute;
-                right: 7px;
-                top: 5px;
+                display: none;
             }
             .clear {
                 clear:both;
